--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.1",
+    "ngx-owl-carousel-o": "^14.0.1",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
